--- a/LatencyMeterCSharp/LatencyMeterCSharp.csproj
+++ b/LatencyMeterCSharp/LatencyMeterCSharp.csproj
@@ -56,10 +56,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IntegratedForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IntegratedForm.Designer.cs">
+      <DependentUpon>IntegratedForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IntegratedForm.resx">
+      <DependentUpon>IntegratedForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
